Aug 8, 2006

  * FIXED: http_relative_path/2.

Aug 7, 2006

  * DEBUG: Do not generate debug info for library html_write.pl, as it makes
    code using the library very hard to debug.

Jun 30, 2006

  * FIXED: dangling choicepoint in http_open/3.

  * ADDED: zero_or_more as parameter option to http_parameters/[2,3]

Apr 11, 2006

  * ADDED: http_parameters library

  * FIXED: properly handle the server closing the connection if the connection
    is specified as Keep-alive in the client (http_get/3 and http_post/4).

Feb 24, 2006

  * Added http_error.pl to generate nice looking stack-traces.

Feb 23, 2006

  * Added http_session.pl and http:request_expansion/2 hook.

Feb 16, 2006

  * Added http_current_request/1 to get access to the currently executing
    request.

Feb 10, 2006

  * Make http_post deal with Unicode data.

Jan 20, 2006

  * Map Host:  <host>:<port> into host(Host), port(Port) when reading
    HTTP requests.

Jan 16, 2006

  * Fixed redirect handling if the option to(Stream) is given.  
    Jacco van Ossenbruggen.

Jan 11, 2006

  * Added: handling of 302 redirect messages in http_get/3.
  * Fix http_get/3 with sgml plugin and proxy option.  Usenet, `mans'.

Dec 10, 2005

  * Enhanced robustness of the server to malicious clients by using
    call_cleanup wrappers around the code doing the actual reply.  Old
    code lead to memory and file-descriptor leaking.

Dec 7, 2005

  * Added http_timestamp/2  to http_header.pl.  Also changed the time
    representation to be compatible to the current RFC1132 standard.

Nov 16, 2005

  * Avoid XPCE http servers to be garbage collected.

Oct 17, 2005

  * ADDED: Pass peer from threaded HTTP server to request.

  * ENHANCED: Use UTF-8 encoding for text by default.

Sep 28, 2005

  * FIXED: Regular expressions in xpce_httpd frontend.  Wouter Jansweijer.

Sep 23, 2005

  * ADDED: .class to mimetypes.pl.

Sep 7, 2005

  * FIXED: handle connection error in http_get/3 gracefully.

Sep 6, 2005
